tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_subscript.c
struct s;
extern struct s *ptr;

int main(void) { ptr[0]; }